[package]
edition = "2021"
name = "pizza-platz-shop"
version = "0.2.0"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
anyhow = "1.0.57"
chrono = "0.4.22"
env_logger = "0.9.0"
log = "0.4.17"
platz-sdk = "0.4.3"
rand = "0.8.5"
rust_decimal = {version = "1.26.1", features = ["rand"]}
serde = {version = "1.0.137", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
